# contextual_differentiation_memory_service

./: .gitattributes  .gitignore  CLAUDE.md  README.md  RESEARCH_ARC.md  [Gemini Canvas] Contextual Differentiation Memory Service.md  pyproject.toml  status.md
.github/workflows/: ci.yml
docs/: DESIGN.md  DEVIATIONS.md  OBSERVER_UI_DESIGN.md  PARAMETER_BASIS.md  REDTEAM_FINDINGS.md  REPO_ANALYSIS_2026-07-01.md  STEERING_EXPERIMENT.md  TEMPERAMENT_PLAN.md  TEMPERAMENT_RESEARCH_NOTES.md  VALIDATION.md  VIEWPORT.md
docs/redteam/: CLAUDE_MD_INTERFERENCE.md  CYCLE4_DEEPSEEK.md  CYCLE4_DEEPSEEK_REPORT.md  CYCLE4_GPT55.md  CYCLE5_GLM52_REPORT.md  CYCLE6_OWL_ANALYSIS.md  CYCLE7_OWL_ANALYSIS.md  CYCLE8_OWL_FINAL.md  CYCLE9_ARCHITECTURE.md  CYCLE9_COGNITIVE_MATH.md  CYCLE9_CONCURRENCY.md  CYCLE9_FINAL.md  CYCLE9_MAXIMUM_EFFORT.md  CYCLE9_MECHANICAL.md  CYCLE9_SCALE.md  CYCLE9_SECURITY.md  ENRICHED_PHENOTYPE.md  LAYER3_PROVENANCE_DESIGN.md  README.md  corroboration_validation.txt  layer3_full_validation.txt  layer3_validation.txt  pressure_test.txt  provenance_validation.txt
docs/research/: DREAMER_MODELS.md  RESEARCH_MODELS.md
docs/validation/: SCALE_LADDER.md
src/cdms/: __init__.py  __main__.py  cli.py  config.py  (+14 more)
tests/: conftest.py  test_a2_home_relocation.py  test_breach_from_votes.py  test_capture_concurrency.py  test_config_recovery.py  test_consolidate.py  test_cycle3.py  test_cycle7_deferred.py  test_cycle7_followup.py  test_cycle7_triage.py  test_cycle8_c1.py  test_cycle8_fuzz.py  test_cycle8_hm2.py  test_cycle8_lows.py  test_cycle8_m8.py  test_cycle8_mm3.py  test_cycle8_mm4.py  test_cycle8_scale.py  test_cycle8_triage.py  test_cycle9_assoc_scar_gate.py  test_cycle9_db_init_cleanup.py  test_cycle9_fact_decay_cap.py  test_cycle9_i1_snapshot.py  test_cycle9_quickwins.py  test_cycle9_salience_config.py  test_drift_trajectory.py  test_embedder_integrity.py  test_enriched_phenotype.py  test_forgetting_curve.py  test_framing_lock.py  test_gist_stability.py  test_inference.py  test_install_safety.py  test_isolation.py  test_layer3_provenance.py  test_lifecycle.py  test_lmstudio_chat.py  test_mcp_server.py  test_null_safety.py  test_observer.py  (+24 more)
tools/: analyze_psyches.py  build_gold_set.py  dreamer_models.py  drift_trajectory.py  finalize_gold.py  forgetting_ab.py  framing_conditions.py  framing_conditions_scaffold.py  framing_confirm_gen.py  framing_confirm_probes.py  framing_facets.py  framing_facets_probes.py  framing_frontier_gen.py  framing_lift_power_sim.py  framing_pilot_analyze.py  framing_pilot_gen.py  framing_pilot_judge.py  framing_scaffold_gen.py  framing_variant_recovery.py  gen_sweep_aggregate.py  gen_sweep_facet_cluster.py  generate_softband.py  individuation_experiment.py  judge_expand.py  judge_ladder.py  ladder_aggregate.py  lmstudio_chat.py  local_models.py  openrouter_chat.py  openrouter_cost_guard.py  ownership_judge.py  phenotype_report.py  pilot_provenance.py  pilot_provenance3.py  probes_bem_facet.py  probes_rephrasings.py  probes_review.py  quant_repl_aggregate.py  recompute_expand.py  redteam_claude_md_analyze.py  (+22 more)
(+156 files in other folders)
